# hawk

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
locales/en/: main.ftl
locales/fa/: main.ftl
migrations/: 001_init.sql
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/clock/: mod.rs  system.rs
src/adapters/crawler/: extract.rs  http_fetcher.rs  mod.rs
src/adapters/crypto/: aes_gcm_box.rs  mod.rs
src/adapters/db/: mod.rs  pool.rs
src/adapters/db/repos/: conversation_repo.rs  crawl_repo.rs  history_repo.rs  mod.rs  page_trace_repo.rs  payment_repo.rs  schedule_repo.rs  user_repo.rs
src/adapters/email/: composite.rs  mod.rs  resend.rs  smtp.rs
src/adapters/i18n/: mod.rs
src/adapters/llm/: factory.rs  mod.rs  openai_compat.rs
src/adapters/telegram/: bot.rs  keyboards.rs  mod.rs  pending_inline.rs  state.rs
src/application/: conversation.rs  history.rs  manage_schedule.rs  mod.rs  onboard.rs  purchase.rs  run_due_schedules.rs  settings.rs  start_crawl.rs
src/bootstrap/: app.rs  config.rs  mod.rs  tracing.rs
src/domain/: crawl.rs  credits.rs  error.rs  events.rs  history.rs  ids.rs  llm_errors.rs  locale.rs  mod.rs  payment.rs  provider.rs  result_parser.rs  schedule.rs  secret.rs  url_rules.rs  user.rs
src/infrastructure/: event_bus.rs  mod.rs  worker_pool.rs
src/ports/: clock.rs  id_gen.rs  llm.rs  mailer.rs  mod.rs  page_fetcher.rs  repositories.rs  secret_box.rs
tests/: repo_user_roundtrip.rs
(+6 files in other folders)
