[package]
name = "smart-hawk"
version = "0.1.0"
edition = "2021"
description = "Smart Hawk — AI-powered website crawler Telegram bot"
license = "MIT"
repository = "https://github.com/Aryagorjipour/hawk"
readme = "README.md"
keywords = ["telegram", "bot", "crawler", "ai", "llm"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros", "rustls", "ctrlc_handler"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "cookies"] }
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "hostname"] }
dotenvy = "0.15"
async-trait = "0.1"
url = { version = "2", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
scraper = "0.22"
html2text = "0.13"
regex = "1"
once_cell = "1"
parking_lot = "0.12"
futures = "0.3"
bytes = "1"
ipnet = "2"
idna = "1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
